vlib/v/checker/tests/cast_string_to_rune_err.vv
fn main() {
	_ := rune('0')
	_ := rune('012345')
	_ := rune('v')
	_ := rune('abcd')
}
